# QtCaPso

./: .gitignore  CMakeLists.txt  M3CA.sln  M3CA.vcxproj  M3CA.vcxproj.filters  QtCaPso.pro  README.md  batchdialog.cpp  batchdialog.h  batchdialog.ui  batchitem.cpp  batchitem.h  catype.h  caview.cpp  caview.h  cellularautomaton.cpp  controller.cpp  controller.h  controller.qrc  controller.ui  globalcapso.cpp  globalcapso.h  globalsettingsdialog.cpp  globalsettingsdialog.h  globalsettingsdialog.ui  localcapso.cpp  localcapso.h  localsettingsdialog.cpp  localsettingsdialog.h  localsettingsdialog.ui  main.cpp  particle.h  swarm.cpp  swarm.h  util.cpp  util.h
CaPsoGui/: CMakeLists.txt  util.cpp  util.h
CaPsoGui/Controller/: batchdialog.cpp  batchdialog.h  controller.cpp  controller.h  controller.qrc  globalsettingsdialog.ui  localsettingsdialog.cpp  localsettingsdialog.h
Controller/: Controller.pri  batchdialog.cpp  batchdialog.h  batchitem.h  controller.cpp  controller.h  globalsettingsdialog.cpp  localsettingsdialog.cpp  localsettingsdialog.ui
Models/: Models.pri  globalcapso.cpp  globalcapso.h  latticepoint.cpp  latticepoint.h  localcapso.cpp  localcapso.h  particle.cpp  particle.h  randomnumber.cpp  swarm.cpp  swarm.h
View/: View.pri
capso/: CMakeLists.txt
capso/include/: capsosettings.h  cellularautomaton.h  globalcapso.h  latticepoint.h  localcapso.h  particle.h  randomnumber.h  swarm.h
capso/src/: cellularautomaton.cpp  globalcapso.cpp  localcapso.cpp  randomnumber.cpp  swarm.cpp
ergocli/: CMakeLists.txt  main.cpp
examples/testing/: fig_6_10_a.json  fig_6_10_b.json  fig_6_10_c.json  fig_6_10_d.json  fig_6_11_a_epsilon_1.json  fig_6_11_a_epsilon_2.json  fig_6_11_a_epsilon_3.json  fig_6_12_a.json  fig_6_12_b.json  fig_6_12_c.json  fig_6_13_a.json  fig_6_13_b.json  fig_6_14_b.json  fig_6_3_a_ez_1.json  fig_6_3_a_ez_5.json  fig_6_5_a_ez_1.json  fig_6_5_b_ez_3.json  fig_6_5_c_ez_5.json  fig_6_9_a.json  fig_6_9_b.json  fig_6_9_c.json  fig_6_9_d.json
src/: CMakeLists.txt  main.cpp  util.cpp  util.h
src/Controller/: batchdialog.cpp  batchdialog.h  batchitem.cpp  controller.cpp  controller.h  controller.qrc  controller.ui  globalsettingsdialog.cpp  globalsettingsdialog.h  localsettingsdialog.cpp  localsettingsdialog.h  localsettingsdialog.ui
src/Models/: capsosettings.h  cellularautomaton.h  globalcapso.h  localcapso.cpp  randomnumber.cpp  randomnumber.h  swarm.cpp  swarm.h
src/View/: caview.cpp  caview.h
test/: CMakeLists.txt
tests/: CMakeLists.txt  capso-test.cpp  main.cpp  randomnumber-test.cpp
